--- a/pk-tsc/package.json
+++ b/pk-tsc/package.json
@@ -6,5 +6,23 @@
   "dependencies": {
     "tsc": "^1.20150623.0",
     "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/jest": "^26.0.5",
+    "chai": "^4.2.0",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.3"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
