--- a/pk-tsc/package.json
+++ b/pk-tsc/package.json
@@ -10,9 +10,13 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/jest": "^26.0.5",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "chai": "^4.2.0",
+    "eslint": "^7.5.0",
     "jest": "^26.1.0",
-    "ts-jest": "^26.1.3"
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
   },
   "jest": {
     "transform": {
