--- a/pk-tsc/package.json
+++ b/pk-tsc/package.json
@@ -14,7 +14,13 @@
     "@typescript-eslint/parser": "^3.7.0",
     "chai": "^4.2.0",
     "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jsdoc": "^30.0.3",
     "jest": "^26.1.0",
+    "prettier": "^2.0.5",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7"
   },
