--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "ls-all": "git ls-tree --name-only -r HEAD",
     "prettier": "yarn ls-all | awk '{if(NR>2)print}' | xargs prettier --config .prettierrc --write",
     "prettier:check": "yarn ls-all | awk '{if(NR>2)print}' | xargs prettier --config .prettierrc --check",
-    "lint": "yarn ls-all | awk '{if(NR>2)print}' | xargs eslint --quiet"
+    "tslint": "yarn ls-all | awk '{if(NR>2)print}' | xargs eslint --quiet",
+    "mdlint": "yarn ls-all | grep *.md | xargs markdownlint --config markdownlint.json",
+    "lint": "yarn tslint && yarn mdlint"
   }
 }
