--- a/pk-tsc/package.json
+++ b/pk-tsc/package.json
@@ -19,7 +19,9 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.18.0",
     "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-markdown": "^2.0.0-alpha.0",
     "jest": "^26.1.0",
+    "markdownlint-cli": "^0.23.2",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7"
