--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn
-    - run: npm prettier:check
-    - run: npm lint
-    - run: npm test
+    - run: yarn prettier:check
+    - run: yarn lint
+    - run: yarn test
+    - run: yarn spellcheck
