--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-    types: [ review_requested, ready_for_review ]
+    types: [ ready_for_review ]
 
 jobs:
   build:
